--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages li { padding: 5px 10px; id:"li"}
       #messages li:nth-child(odd) { background: #eee; }
-      #messages { margin-bottom: 80px }
+      #messages { margin-bottom: 120px }
     </style>
   </head>
   <body>
     <ul id="messages"></ul>
     <form action="" id="form">
+      <input id="r" readonly="true" placeholder="上線名單">
       <input id="s" autocomplete="off" placeholder="試著私訊別人"/><button id="clear">Clear</button>
       <input id="m" autocomplete="off"/><button id="send">Send</button>
     </form>
@@ -32,6 +33,7 @@
 
           var room;
           room = prompt("room?", "");
+          room = '1-'+room;
           document.title = "Socket.IO chat room "+ room;
 
           var socket = io.connect('', {query: 'name='+name});
@@ -73,6 +75,7 @@
               }
           });//*/
 
+          //listen on how is typing, and show on clint console
           /*$('#m').on('keyup', function(){
               socket.emit('typing', name);
               $('#messages').append($('<li>').text('someone is typing'));
@@ -82,6 +85,7 @@
 
 
           <!--region client listen event from server-->
+          //listen any connection into same room
           socket.on('connected'+room, function(msg){
               $('#messages').append($('<li>').text(msg));
               window.scrollTo(0, document.body.scrollHeight);
@@ -96,6 +100,7 @@
               socket = io.connect('', {query: 'name='+name});
           });*/
 
+          //listen any message for client
           socket.on('chat message'+room, function(name, msg){
             $('#messages').append($('<li>').text(name+": "+msg));
             window.scrollTo(0, document.body.scrollHeight);
@@ -106,26 +111,35 @@
               console.log(name + " is typing...");
           });
 
-
+          //listen any disconnection in same room
           socket.on('disconnected'+room, function(msg){
               $('#messages').append($('<li>').text(msg));
               window.scrollTo(0, document.body.scrollHeight);
           });
 
+          //get history messages and show it
           socket.on('load history'+room, function(history){
-              history.forEach(
-                function(value, index){
-                  msg = value.name+': '+value.log;
+
+              history.msg.forEach(
+                function(value){
+                  msg = value.cl_record;
                   //$('#messages').prepend($('<li>').text(msg));
-                    $('#messages').append($('<li>').text(msg));
+                    $('#messages').append($('<li>').text(value.cl_record));
                   window.scrollTo(0, document.body.scrollHeight);//*/
 
               });
 
-              console.log('history done');
+              //told cerver losding history done
               socket.emit('welcome', name);
-              //var container = document.getElementById('li');
-              //msg.insertBefore(document.createElement($('<li>').text(msg)), container.firstChild);
+
+              //console.log("history-> ", history);
+              //console.log('history done');
+          });
+
+          socket.on('update roomInfo'+room, function(info){
+              $('#r').val(info);
+
+              console.log(info);
           });
           <!--endregion-->
 
